fixed image overflow in comments

--- a/static/css/components/news.css
+++ b/static/css/components/news.css
@@ -272,18 +272,19 @@
 .news__comment-profile-img {
     width: 10%;
     height: 5rem;
-    margin-right: 1rem;
+    margin-right: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     align-self: center;
 }
 .news__comment-profile-img img { 
+    max-width: 90%;
     height: 100%;
 }
 
 .news__comment-information {
-    width: 90%;
+    width: 85%;
 }
 .news__comment-information div{
     display: flex;
